--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,9 @@ body {
 }
 
 .header {
-  background: url(http://s3.amazonaws.com/codecademy-content/projects/innovation-cloud/bg.jpg) no-repeat center center; 
+  background: url(pictures/banner.jpg) no-repeat center center; 
   background-size: cover;
-  height: 800px;
+  height: 300px;
   text-align: center; 
 }
 
@@ -97,9 +97,9 @@ body {
 }
 
 .jumbotron {
-  background: url(http://s3.amazonaws.com/codecademy-content/projects/innovation-cloud/jumbotron_bg.jpg) center center;
+  background: url(pictures/world.png) center center;
   background-size: cover;
-  height: 600px; 
+  height: 300px; 
 }
 
 .jumbotron .container {
