--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .header {
-  background: url("banner.jpg") no-repeat center center; 
+  background: url("../pictures/banner.jpg") no-repeat center center; 
   background-size: cover;
   height: 800px;
   text-align: center; 
@@ -97,7 +97,7 @@ body {
 }
 
 .jumbotron {
-  background: url("world.png") center center;
+  background: url("../pictures/world.png") center center;
   background-size: cover;
   height: 600px; 
 }
