--- a/css/style.css
+++ b/css/style.css
@@ -1,152 +1,104 @@
-html, body {
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background-image: linear-gradient(to right top, #382c00, #5c4800, #806400, #a38000, #c79c00);
+  font-family: Montserrat, sans-serif;
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  min-height: 100vh;
+  margin: 0;
+}
+
+h3 {
+  margin: 10px 0;
+}
+
+h6 {
+  margin: 5px 0;
+  text-transform: uppercase;
+}
+
+p {
+  font-size: 14px;
+  line-height: 21px;
+}
+
+.card-container {
+  background-color: #423b20;
+  border-radius: 25px;
+  box-shadow: 10px 10px 15px rgba(0,0,0,0.35);
+  color: #dbc87d;
+  padding: 30px 0 0;
+  position: relative;
+  width: 350px;
+  max-width: 100%;
+  text-align: center;
+  margin: 20px 0;
+  overflow: hidden;
+}
+
+.card-container .pro {
+  color: #423b20;
+  background-color: #FEBB0B;
+  border-radius: 3px;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 3px 7px;
+  position: absolute;
+  top: 30px;
+  left: 30px;
+}
+
+.card-container img {
+  border: 1px solid #FEBB0B;
+  border-radius: 50%;
+  padding: 7px;
+  height: 150px;
+  width: 150px;
+}
+
+button.primary {
+  background-color: #FEBB0B;
+  border: 1px solid #FEBB0B;
+  border-radius: 3px;
+  color: #fff;
+  font-family: Montserrat, sans-serif;
+  font-weight: 500;
+  padding: 10px 25px;
+}
+
+button.primary.ghost {
+  background-color: transparent;
+  color: #FEBB0B;
+}
+
+.skills {
+  background-color: #332e19;
+  text-align: left;
+  padding: 15px;
+  margin-top: 30px;
+}
+
+.skills ul {
+  list-style-type: none;
   margin: 0;
   padding: 0;
 }
 
-body {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 100;
-}
-
-.container {
-  margin: 0 auto;
-  max-width: 940px; 
-  padding: 0 10px;
-}
-
-.header {
-  background: url("../pictures/banner.jpg") no-repeat center center; 
-  background-size: cover;
-  height: 800px;
-  text-align: center; 
-}
-
-.header .container {
-  position: relative;
-  top: 200px;
-}
-
-.header h1 {
-  color: #fff;
-  line-height: 100px; 
-  font-size: 80px;
-  margin-top: 0;
-  margin-bottom: 80px;
-  text-transform: uppercase; 
-}
-
-@media (min-width:850px) {
-  .header h1 {
-    font-size: 120px;
-  }
-}
-
-.header p {
-  color: #fff;
-  font-weight: 500;
-  letter-spacing: 8px;
-  margin-bottom: 40px;
-  margin-top: 0;
-  text-transform: uppercase; 
-}
-
-.btn {
-  color: #fff;
-  background: #000;
-  padding: 10px 40px;
-  text-decoration: none; 
-  transition: background .5s; 
-}
-
-.nav { 
-  background: #000;
-  height: 80px; 
-  width: 100%;
-}
-
-.nav ul {
-  height: 80px;
-  list-style: none;
-  margin: 0 auto; 
-  padding: 0;
-}
-
-.nav ul li {
-  color: #fff;
-  display: inline-block; 
-  height: 80px;
-  line-height: 80px; 
-  list-style: none;
-  padding: 0 10px;
-  transition: background .5s; 
-}
-
-.btn:hover, .nav ul li:hover {
-  background: #117bff;
-  cursor: pointer; 
-  transition: background .5s;  
-}
-
-.main .container {
-  margin: 80px auto;
-}
-
-.main img {
-  float: left;
-  margin: 50px 80px 50px 0;
-}
-
-.jumbotron {
-  background: url("../pictures/world.png") center center;
-  background-size: cover;
-  height: 600px; 
-}
-
-.jumbotron .container {
-  position: relative;
-  top: 220px;
-}
-
-.jumbotron h2 {
-  color: #fff;
-  text-align: right; 
-}
-
-.jumbotron p {
-  color: #fff; 
-  text-align: right; 
-}
-
-.jumbotron .btn {
-  margin: 10px 0 0;
-  float: right; 
-}
-
-.footer { 
-  background: #000;
-  height: 80px; 
-  padding-bottom: 50px;
-}
-
-.footer p { 
-  color: #fff;
-  font-size: 14px;  
-  height: 80px; 
-  line-height: 80px;
-  margin: 0;  
-}
-
-@media (max-width: 500px) {
-  .header h1 {
-    font-size: 50px;
-    line-height: 64px;
-  }
-
-  .main, .jumbotron {
-    padding: 0 30px;
-  }
-
-  .main img {
-    width: 100%;
-  }
+.skills ul li {
+  border: 1px solid #dbc87d;
+  border-radius: 2px;
+  display: inline-block;
+  font-size: 12px;
+  margin: 0 7px 7px 0;
+  padding: 7px;
 }
