--- a/css/style.css
+++ b/css/style.css
@@ -102,3 +102,9 @@ button.primary.ghost {
   margin: 0 7px 7px 0;
   padding: 7px;
 }
+
+@media (max-width: 1300px) {
+  .card-container {
+    width: 80%;
+  }
+}
