--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,6 @@ body {
   font-family: Montserrat, sans-serif;
   align-items: center;
   justify-content: center;
-
-  min-height: 100%;
-  margin: 0;
 }
 
 h3 {
@@ -32,9 +29,9 @@ p {
   padding: 30px 0 0;
   position: relative;
   width: 350px;
-  max-width: 100%;
+  max-width: 60%;
   text-align: center;
-  margin: 5% auto;
+  margin-top: 5%;
   overflow: hidden;
 }
 
