--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
 body {
-  background-image: linear-gradient(to right top, #382c00, #5c4800, #806400, #a38000, #c79c00);
+  background-color: #a38000;
   font-family: Montserrat, sans-serif;
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 100%;
 }
 
 h3 {
@@ -29,10 +30,10 @@ p {
   color: #dbc87d;
   padding: 30px 0 0;
   position: relative;
-  width: 350px;
-  max-width: 80%;
+  width: 17%;
   text-align: center;
   overflow: hidden;
+  margin-top: 5%;
 }
 
 .card-container .pro {
@@ -91,3 +92,20 @@ button.primary.ghost {
   margin: 0 7px 7px 0;
   padding: 7px;
 }
+
+@media (max-width: 1754px) { 
+  .card-container {
+    width: 60%;
+  }
+}
+
+@media (max-width: 1326px) { 
+  .card-container {
+    width: 70%;
+  }
+}
+
+@media (max-width: 776px) { 
+  .card-container {
+    width: 100%;
+  }
