--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,8 @@
 body {
   background-color: #a38000;
   font-family: Montserrat, sans-serif;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   height: 100%;
+  text-align: center;
 }
 
 h3 {
@@ -31,9 +29,8 @@ p {
   padding: 30px 0 0;
   position: relative;
   width: 17%;
-  text-align: center;
   overflow: hidden;
-  margin-top: 5%;
+  margin: auto;
 }
 
 .card-container .pro {
