--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,8 @@ h6 {
 }
 
 p {
-  font-size: 0.875rem;
-  line-height: 1.3125rem;
+  font-size: 16px;
+  line-height: 21px;
 }
 
 .card-container {
@@ -89,3 +89,8 @@ button.primary.ghost {
   padding: 7px;
 }
 
+@media (max-width: 1079px) { 
+  .card-container {
+    width: 70%;
+  }
+}
