--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ h6 {
 p {
   font-size: 16px;
   line-height: 21px;
+  padding: 0 20px;
 }
 
 .card-container {
@@ -27,7 +28,7 @@ p {
   color: #dbc87d;
   padding: 30px 0 0;
   position: relative;
-  width: 17%;
+  width: 20%;
   overflow: hidden;
   margin: auto;
 }
@@ -91,6 +92,6 @@ button.primary.ghost {
 
 @media (max-width: 1079px) { 
   .card-container {
-    width: 20%;
+    width: 80%;
   }
 }
