--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ p {
   position: relative;
   width: 350px;
   overflow: hidden;
-  margin: 100px auto;
+  margin: 100px auto 0;
 }
 
 .card-container .pro {
@@ -53,7 +53,7 @@ p {
   width: 150px;
 }
 
-button.primary {
+.primary {
   background-color: #FEBB0B;
   border: 1px solid #FEBB0B;
   border-radius: 3px;
@@ -62,9 +62,11 @@ button.primary {
   font-size: 14px;
   font-weight: 500;
   padding: 10px 25px;
+  text-decoration: none;
+  margin: 0 5px;
 }
 
-button.primary.ghost {
+.primary.ghost {
   background-color: transparent;
   color: #FEBB0B;
 }
@@ -118,10 +120,9 @@ button.primary.ghost {
     color: #dbc87d;
     padding: 60px 0 0;
     position: relative;
-    width: 80%;
+    width: 700px;
     overflow: hidden;
-    margin: 100px auto;
-    vertical-align: middle;
+    margin: 200px auto 0;
   }
 
   .card-container .pro {
@@ -144,15 +145,17 @@ button.primary.ghost {
     width: 300px;
   }
 
-  button.primary {
+  .primary {
     background-color: #FEBB0B;
     border: 2px solid #FEBB0B;
     border-radius: 6px;
     color: #fff;
     font-family: Montserrat, sans-serif;
     font-size: 28px;
-    font-weight: 1000;
+    font-weight: 500;
     padding: 20px 50px;
+    text-decoration: none;
+    margin: 0 10px;
   }
 
   .skills {
